--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "04_insta_clone",
+  "name": "SnapNest",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
- "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js",
-},
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
