--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "04_insta_clone",
+  "name": "SnapNest",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
